fix overlap af labels i clicktooltip

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -43,7 +43,7 @@
 /* ToolTip */
 
 .labelText {
-    font-size: 2vmin;
+    font-size: 1.7vmin;
     font-weight: bold;
     stroke: none;
 }
